# asciiplayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/tests/: WorkQueueTests.cmake
src/: AudioPresenter.cpp  AudioPresenter.h  Console.cpp  Console.h  Logger.cpp  Logger.h  Player.cpp  Player.h  Presenter.h  VideoPresenter.cpp  VideoPresenter.h  WorkQueue.h  console_info.cpp
src/tests/: WorkQueueTests.cpp
utils/: console_info.cpp  console_info.h
